--- a/shoulder-parent/pom.xml
+++ b/shoulder-parent/pom.xml
@@ -19,14 +19,14 @@
         <maven.javadoc.charset>${project.build.sourceEncoding}</maven.javadoc.charset>
         <maven.build.timestamp.format>yyyy-MM-dd HH:mm:ss</maven.build.timestamp.format>
 
-        <maven-compiler-plugin.version>3.8.1</maven-compiler-plugin.version>
+        <maven-compiler-plugin.version>3.11.0</maven-compiler-plugin.version>
         <maven-source-plugin.version>3.2.1</maven-source-plugin.version>
         <maven-javadoc-plugin.version>3.2.0</maven-javadoc-plugin.version>
-        <maven-jar-plugin.version>3.2.0</maven-jar-plugin.version>
+        <maven-jar-plugin.version>3.3.0</maven-jar-plugin.version>
         <maven-gpg-plugin.version>3.1.0</maven-gpg-plugin.version>
 
         <mapstruct.version>1.3.1.Final</mapstruct.version>
-        <maven-surefire-plugin.version>2.22.2</maven-surefire-plugin.version>
+        <maven-surefire-plugin.version>3.0.0</maven-surefire-plugin.version>
         <findbugs-maven-plugin.version>3.0.5</findbugs-maven-plugin.version>
         <cobertura-maven-plugin.version>2.7</cobertura-maven-plugin.version>
         <license-maven-plugin.version>2.0.0</license-maven-plugin.version>
@@ -314,7 +314,7 @@
                     </configuration>
                 </plugin>
 
-                <!-- 单元测试配置 when mvn test -->
+                <!-- 单元测试配置 when mvn test https://github.com/apache/maven-surefire/blob/master/maven-surefire-plugin/src/main/java/org/apache/maven/plugin/surefire/SurefirePlugin.java -->
                 <plugin>
                     <groupId>org.apache.maven.plugins</groupId>
                     <artifactId>maven-surefire-plugin</artifactId>
@@ -326,7 +326,7 @@
                             <include>**/*Test.groovy</include>
                             <include>**/*Spec.*</include>
                         </includes>
-                        <forkMode>always</forkMode>
+                        <threadCountSuites>2</threadCountSuites>
                         <!-- 这里的max参数可能导致使用者 OOM，暂不添加最大值 -->
                         <argLine>-Xms256m -XX:MetaspaceSize=128m -Dfile.encoding=utf-8</argLine>
                         <argLine>--add-modules java.xml.bind</argLine>
