--- a/shoulder-build/shoulder-plugins/shoulder-ext-comment/pom.xml
+++ b/shoulder-build/shoulder-plugins/shoulder-ext-comment/pom.xml
@@ -6,7 +6,7 @@
     <parent>
         <groupId>cn.itlym</groupId>
         <artifactId>shoulder-plugins</artifactId>
-        <version>1.0.0</version><!-- shoulder-version -->
+        <version>1.1.0-SNAPSHOT</version><!-- shoulder-version -->
     </parent>
 
     <artifactId>shoulder-ext-comment</artifactId>
