--- a/shoulder-dependencies/pom.xml
+++ b/shoulder-dependencies/pom.xml
@@ -5,7 +5,7 @@
     <parent>
         <groupId>cn.itlym</groupId>
         <artifactId>shoulder-framework</artifactId>
-        <version>1.0.0</version><!-- shoulder-version -->
+        <version>1.1.0-SNAPSHOT</version><!-- shoulder-version -->
         <!--<relativePath>../pom.xml</relativePath>-->
     </parent>
     <modelVersion>4.0.0</modelVersion>
@@ -21,7 +21,7 @@
     <properties>
         <!-- shoulder framework bom -->
         <shoulder-lombok.version>0.1</shoulder-lombok.version>
-        <shoulder.version>1.0.0</shoulder.version><!-- shoulder-version -->
+        <shoulder.version>1.1.0-SNAPSHOT</shoulder.version><!-- shoulder-version -->
 
         <!-- dependencies bom -->
 
@@ -50,7 +50,7 @@
         <!-- api-doc -->
         <!-- openApi(swagger)是行业标准，swagger 1.7 更名为 io.swagger.core.v3 但 swagger2 绝大多数开发者更熟悉而非 swagger3 -->
         <swagger3.version>2.2.28</swagger3.version>
-        <springdoc.version>2.8.3</springdoc.version>
+        <springdoc.version>2.8.5</springdoc.version>
         <!-- knife4j 前身是 swagger-bootstrap-ui，一个用于优化 swagger-ui 的项目，视觉效果更好 -->
         <knife4j.version>4.5.0</knife4j.version>
 
@@ -75,7 +75,7 @@
         <jna.version>5.16.0</jna.version>
         <!-- useful tools -->
         <pinyin4j.version>2.5.1</pinyin4j.version>
-        <hutool.version>5.8.35</hutool.version>
+        <hutool.version>5.8.36</hutool.version>
         <javassist.version>3.30.2-GA</javassist.version>
         <jakarta.ws.rs-api.version>3.1.0</jakarta.ws.rs-api.version>
 
@@ -111,7 +111,7 @@
         <pagehelper-starter.version>2.1.0</pagehelper-starter.version>
         <beecp.version>4.0.6</beecp.version>
         <p6spy.version>3.9.1</p6spy.version>
-        <redisson.version>3.43.0</redisson.version>
+        <redisson.version>3.45.0</redisson.version>
 
         <!-- test -->
         <mockito-all.version>1.10.19</mockito-all.version>
@@ -527,14 +527,14 @@
             <dependency>
                 <groupId>org.apache.httpcomponents.client5</groupId>
                 <artifactId>httpclient5</artifactId>
-                <version>5.4.1</version>
+                <version>5.4.2</version>
             </dependency>
 
             <!-- https://mvnrepository.com/artifact/org.apache.httpcomponents.core5/httpcore5 -->
             <dependency>
                 <groupId>org.apache.httpcomponents.core5</groupId>
                 <artifactId>httpcore5</artifactId>
-                <version>5.3.1</version>
+                <version>5.3.2</version>
             </dependency>
 
 
